[유하람] 면접결과 처리 - 비동기
- restLectureController로 작성할 것! addLectureSignupResult.html - ajax 마저
작성하기

--- a/lms/src/main/resources/templates/PI/lecture/lectureSignup.html
+++ b/lms/src/main/resources/templates/PI/lecture/lectureSignup.html
@@ -9,8 +9,8 @@
 
 <!-- index.html 고유 스크립트 추가 -->
 <th:block layout:fragment="script">
-<script>$(document).ready(function(){
-	
+<script>
+$(document).ready(function(){	
 	// 강의공고 등록하기 버튼 클릭시 이벤트 처리
 	$('#insert').click(function(){
 		console.log('#insert click test');
