[유하람] 면접결과 등록 완료, PI 수강신청 가능 목록 조회 mapper.xml 수정
- 면접 결과 일괄등록하기 (화면에서 vo-LectureSignupResult에 담아 service에서
domain-lectureSignupResultDomain에 담아 mapper호출하기)

- 면접 결과 등록 이후 notice_lecture의 notice_lecture_status 컬럼 업데이트하기

- PI 수강생 입장에서 수강신청 가능한 강의공고 목록 조회시 조건 수정
	AND notice_lecture_recruitment_end_date >= CURRENT_DATE() ---> 추가

--- a/lms/src/main/resources/templates/PI/lecture/lectureSignupNoticeLectureList.html
+++ b/lms/src/main/resources/templates/PI/lecture/lectureSignupNoticeLectureList.html
@@ -11,14 +11,11 @@
 <th:block layout:fragment="script">
 <script>
 $(document).ready(function(){
-	
-	// 강의공고 등록하기 버튼 클릭시 이벤트 처리
+	// 수강신청 버튼 클릭시 이벤트 처리
 	$('#btnAdd').on('click',function(){
 		console.log('#btnAdd click test');
 		location.href='/PI/lecture/lectureSignup'
-		}
 	});
-	
 });
 </script>
 </th:block>
