[김기남] 자격증 시험 신청 리스트(수강생)

--- a/lms/src/main/resources/templates/fragments/PAHeader.html
+++ b/lms/src/main/resources/templates/fragments/PAHeader.html
@@ -66,7 +66,7 @@
 	                    <button class="dropbtn">자격시험정보 
 	                    </button>
 	                    <div class="dropdownatuo-content">
-	                        <a href="/PA/lincense/LicenseTestApplication">#원서접수</a>
+	                        <a href="#">#원서접수</a>
 	                        <a href="#">#합격자/답안발표</a>
 	                        <a href="#">#시험일정</a>
 							<a href="#">#필기시험안내</a>
