--- a/lms/src/main/resources/templates/PA/myPage/PAmyInfo.html
+++ b/lms/src/main/resources/templates/PA/myPage/PAmyInfo.html
@@ -17,6 +17,7 @@
 	<div class="col-sm-2 list-group">
 		<a th:href="@{'/memberModify?institutionCode='+${institutionCode}}" class="list-group-item list-group-item-action">정보수정</a>
 		<a href="#" class="list-group-item list-group-item-action">#수강정보</a>
+		<a href="/PA/license/listLicenseTestApplication" class="list-group-item list-group-item-action">원서접수조회</a>
 		<a href="#" class="list-group-item list-group-item-action">#합격조회</a>
 		<a href="#" class="list-group-item list-group-item-action">#학사 종합정보</a>
 		<a href="#" class="list-group-item list-group-item-action">#성적관리</a>
