--- a/lms/src/main/resources/templates/PI/lecture/viewLectureSignup.html
+++ b/lms/src/main/resources/templates/PI/lecture/viewLectureSignup.html
@@ -40,12 +40,12 @@ $(document).ready(function(){
 <div layout:fragment="content">
 <h1>수강신청 등록하기</h1>
 <h4>수강 정보가 다음과 일치하면 신청 버튼을 클릭하여 주십시오</h4>
-<form id="addLectureSignup" action="/PI/lecture/lectureSignup" method="post">
+<form id="addLectureSignup" action="/PI/lecture/viewLectureSignup" method="post">
 	<div class="form-group">
 		<label>강의공고명</label>
 		<div class="row">
 			<div class="col-sm-6">
-				<input class="form-control" th:value="${noticeLectureTitle}" name="noticeLectureTitle">
+				<input class="form-control" th:value="${noticeLectureTitle}" name="noticeLectureTitle" readonly="readonly">
 			</div>
 			<div class="col-sm-6">			
 				<input hidden="hidden" th:value="${noticeLectureCode}" id="noticeLectureCode" name="noticeLectureCode">
@@ -56,7 +56,7 @@ $(document).ready(function(){
 		<label>교육원명</label>	
 		<div class="row">
 			<div class="col-sm-4">
-				<input class="form-control" th:value="${institutionName}" name="institutionName">
+				<input class="form-control" th:value="${institutionName}" name="institutionName" readonly="readonly">
 			</div>
 			<div class="col-sm-8">			
 				<input hidden="hidden" th:value="${institutionCode}" name="institutionCode">
@@ -67,11 +67,11 @@ $(document).ready(function(){
 		<div class="row">
 			<div class="col-sm-2">
 				<label>회원명</label>	
-				<input class="form-control" th:value="${memberName}" name="memberName">
+				<input class="form-control" th:value="${memberName}" name="memberName" readonly="readonly">
 			</div>
 			<div class="col-sm-2">
 				<label>생년월일</label>	
-				<input class="form-control" th:value="${memberRegistrationNumberFront}" id= "memberRegistrationNumberFront" name="memberRegistrationNumberFront">
+				<input class="form-control" th:value="${memberRegistrationNumberFront}" id= "memberRegistrationNumberFront" name="memberRegistrationNumberFront" readonly="readonly">
 			</div>
 			<div class="col-sm-8">			
 				<input hidden="hidden" th:value="${memberCode}" name="memberCode">
