--- a/lms/src/main/resources/templates/fragments/header.html
+++ b/lms/src/main/resources/templates/fragments/header.html
@@ -70,8 +70,8 @@
 	                    <button class="dropbtn">강의소개
 	                    </button>
 	                    <div class="dropdownatuo-content">
-	                    	<a th:href="@{'/PI/lecture/subjectList?institutionCode='+${institutionCode}}">과목 조회</a>
-	                        <a th:href="@{'/PI/lecture/lectureSignupNoticeLectureList?institutionCode='+${institutionCode}}">수강신청</a>
+	                    	<a th:href="@{'/PI/lecture/listSubject?institutionCode='+${institutionCode}}">과목 조회</a>
+	                        <a th:href="@{'/PI/lecture/listLectureSignupNoticeLecture?institutionCode='+${institutionCode}}">수강신청</a>
 	                        <a href="#">#강의자료실</a>
 	                        <a href="#">#전자도서관</a>
 	                    </div>
@@ -94,10 +94,10 @@
 	                    <button class="dropbtn">마이페이지 
 	                    </button>
 	                    <div class="dropdownatuo-content">
-	                        <a href="@{'/PI/myPage/lectureSignup/signupIndex?institutionCode='+${institutionCode}}">수강정보</a>
+	                        <a href="@{'/PI/myPage/viewSignupIndex?institutionCode='+${institutionCode}}">수강정보</a>
 	                        <a href="#">#학습자료실</a>
 	                        <a href="#">#학사종합정보</a>
-	                        <a href="@{'/PI/lecture/subjectScore?institutionCode='+${institutionCode}}">성적관리</a>
+	                        <a href="@{'/PI/lecture/subjectScore?institutionCode='+${institutionCode}}">#성적관리</a>
 	                        <a href="#">#수료관리</a>
 	                        <a href="#">#1:1상담게시판</a>
 	                        <a th:href="@{'/memberModify?institutionCode='+${institutionCode}}">회원정보수정</a>
