--- a/lms/src/main/resources/templates/PI/myPage/evaluation.html
+++ b/lms/src/main/resources/templates/PI/myPage/evaluation.html
@@ -10,22 +10,225 @@
 
 <!-- index.html 고유 스크립트 추가 -->
 <th:block layout:fragment="script">
+<script>
+$(document).ready(function(){
+	console.log("test");
+	//변수 선언
+	var toilet = $('#toilet');
+	var facility = $('#facility');
+	var texture = $('#texture');
+	var workerOpinion = $('#workerOpinion');
+	var toiletConvinience = $('#toiletConvinience');
+	var facilitySatisfied = $('#facilitySatisfied');
+	var teacherSatisfied = $('#teacherSatisfied');
+	var workerService = $('#workerService');
+	var parkConvinience = $('#parkConvinience');
+	var trafficConvinience = $('#trafficConvinience');
+	var institutionCode =$(institutionCode);
+	//Checked 찾기 
+	$("#btn").click(function(){
+	var toiletVar = $('input[name="toilet"]:checked').val();
+	var facilityVar = $('input[name="facility"]:checked').val();
+	var textureVar = $('input[name="texture"]:checked').val();
+	var workerOpinionVar = $('input[name="workerOpinion"]:checked').val();
+	var toiletConvinienceVar = $('input[name="toiletConvinience"]:checked').val();
+	var facilitySatisfiedVar = $('input[name="facilitySatisfied"]:checked').val();
+	var teacherSatisfiedVar = $('input[name="teacherSatisfied"]:checked').val();
+	var workerServiceVar = $('input[name="workerService"]:checked').val();
+	var parkConvinienceVar = $('input[name="parkConvinience"]:checked').val();
+	var trafficConvinienceVar = $('input[name="trafficConvinience"]:checked').val();
+11
+	//cheked value값 conosle창 확인
+	console.log(toiletVar);
+	console.log(facilityVar);
+	console.log(textureVar);
+	console.log(workerOpinionVar);
+	console.log(toiletConvinienceVar);
+	console.log(facilitySatisfiedVar);
+	console.log(teacherSatisfiedVar);
+	console.log(workerServiceVar);
+	console.log(parkConvinienceVar);
+	console.log(trafficConvinienceVar);
+	
+	
+	// Unchecked 찾기 
+	if($(':radio[name="toilet"]:checked').length < 1){
+	    alert('빠트린 부분이 있습니다');                        
+	    toilet.focus();
+	    event.preventDefault();
+	}
+	
+	else if($(':radio[name="facility"]:checked').length < 1){
+	    alert('빠트린 부분이 있습니다');                        
+	    facility.focus();
+	    event.preventDefault();
+	}
+	
+	else if($(':radio[name="texture"]:checked').length < 1){
+	    alert('빠트린 부분이 있습니다');                        
+	    texture.focus();
+	    event.preventDefault();
+	}
+	
+	else if($(':radio[name="workerOpinion"]:checked').length < 1){
+	    alert('빠트린 부분이 있습니다');                        
+	    workerOpinion.focus();
+	    event.preventDefault();
+	}
+	
+	else if($(':radio[name="toiletConvinience"]:checked').length < 1){
+	    alert('빠트린 부분이 있습니다');                        
+	    toiletConvinience.focus();
+	    event.preventDefault();
+	}
+	
+	else if($(':radio[name="facilitySatisfied"]:checked').length < 1){
+	    alert('빠트린 부분이 있습니다');                        
+	    facilitySatisfied.focus();
+	    event.preventDefault();
+	}
+	
+	else if($(':radio[name="teacherSatisfied"]:checked').length < 1){
+	    alert('빠트린 부분이 있습니다');                        
+	    teacherSatisfied.focus();
+	    event.preventDefault();
+	}
+	
+	else if($(':radio[name="workerService"]:checked').length < 1){
+	    alert('빠트린 부분이 있습니다');                        
+	    workerService.focus();
+	    event.preventDefault();
+	}
+	
+	else if($(':radio[name="parkConvinience"]:checked').length < 1){
+	    alert('빠트린 부분이 있습니다');                        
+	    parkConvinience.focus();
+	    event.preventDefault();
+	}
+	
+	else if($(':radio[name="trafficConvinience"]:checked').length < 1){
+	    alert('빠트린 부분이 있습니다');                        
+	    trafficConvinience.focus();
+	    event.preventDefault();
+	}
+	
+	//값 보내기
+	if(toiletVar != null
+    && facilityVar != null 
+    &&	textureVar != null
+    &&	workerOpinionVar != null
+    &&	toiletConvinienceVar != null
+    &&	facilitySatisfiedVar != null
+    &&	teacherSatisfiedVar != null
+    &&	workerServiceVar != null
+    &&	parkConvinienceVar != null
+    &&	trafficConvinienceVar != null
+	){
+	console.log("폼 유효성 검사 완료");	
+	$("#addEval").submit();
+	alert("처리 되었습니다");
+	
+	}
+});
+	
+});
+	
+	
+	
+	
+	
+	
+	
+
+</script>  
 </th:block>
 <div layout:fragment="content">
-<p style="height: 10px"></p>
-	<div class="col-sm-2 list-group"></div>
-	<div class="col-sm-2 list-group">
-		<a th:href="@{'/memberModify?institutionCode='+${institutionCode}}" class="list-group-item list-group-item-action">정보수정</a>
-		<a href="#" class="list-group-item list-group-item-action">#수강정보</a>
-		<a href="#" class="list-group-item list-group-item-action">#학습자료실</a>
-		<a href="#" class="list-group-item list-group-item-action">#학사 종합정보</a>
-		<a href="#" class="list-group-item list-group-item-action">#성적관리</a>
-		<a href="#" class="list-group-item list-group-item-action">#수료관리</a>
-		<a href="#" class="list-group-item list-group-item-action">#1:1 상담게시판</a>
-		<a th:href="@{'/PI/myPage/evaluation?institutionCode='+${institutionCode}}" class="list-group-item list-group-item-action">교육원/강의평가</a>
-	</div>
-	ㅋㅋㅋㅋㅋ
-	<div class="col-sm-8 list-group"></div>	
+	<!--설문지 시작 1-->
+	<form action ="/PI/myPage/evaluation" id="addEval" method="post">  
+	<input type="hidden" name="institutionCode" id="institutionCode" th:value="${institutionCode}">
+	화장실 청결상태는 적절하였습니까?
+	<br>
+	1<input type="radio" name="toilet" value="1" id="toilet">
+	2<input type="radio" name="toilet" value="2" id="toilet">
+	3<input type="radio" name="toilet" value="3" id="toilet">
+	4<input type="radio" name="toilet" value="4" id="toilet">
+	5<input type="radio" name="toilet" value="5" id="toilet"> 
+	<br>	
+	강의실의 온도, 조명등은 적절하였습니까
+	<br>
+	1<input type="radio" name="facility" value="1" id="facility">
+	2<input type="radio" name="facility" value="2" id="facility">
+	3<input type="radio" name="facility" value="3" id="facility">
+	4<input type="radio" name="facility" value="4" id="facility">
+	5<input type="radio" name="facility" value="5" id="facility"> 
+	<br>
+	교육기자재(교재)에 만족하였다
+	<br>
+	1<input type="radio" name="texture" value="1" id="texture">
+	2<input type="radio" name="texture" value="2" id="texture">
+	3<input type="radio" name="texture" value="3" id="texture">
+	4<input type="radio" name="texture" value="4" id="texture">
+	5<input type="radio" name="texture" value="5" id="texture"> 
+	<br>
+	교육원 직원들이 의견을 잘 받아줬습니까
+	<br>
+	1<input type="radio" name="workerOpinion" value="1" id="workerOpinion">
+	2<input type="radio" name="workerOpinion" value="2" id="workerOpinion">
+	3<input type="radio" name="workerOpinion" value="3" id="workerOpinion">
+	4<input type="radio" name="workerOpinion" value="4" id="workerOpinion">
+	5<input type="radio" name="workerOpinion" value="5" id="workerOpinion"> 
+	<br>
+	화장실 이용 편리성은 적절하였습니까
+	<br>
+	1<input type="radio" name="toiletConvinience" value="1" id="toiletConvinience">
+	2<input type="radio" name="toiletConvinience" value="2" id="toiletConvinience">
+	3<input type="radio" name="toiletConvinience" value="3" id="toiletConvinience">
+	4<input type="radio" name="toiletConvinience" value="4" id="toiletConvinience">
+	5<input type="radio" name="toiletConvinience" value="5" id="toiletConvinience">  
+	<br>
+	연수시설(강의실 및 편의시설)에 만족하였다
+	<br>
+	1<input type="radio" name="facilitySatisfied" value="1" id="facilitySatisfied">
+	2<input type="radio" name="facilitySatisfied" value="2" id="facilitySatisfied">
+	3<input type="radio" name="facilitySatisfied" value="3" id="facilitySatisfied">
+	4<input type="radio" name="facilitySatisfied" value="4" id="facilitySatisfied">
+	5<input type="radio" name="facilitySatisfied" value="5" id="facilitySatisfied">
+	<br>
+	강사 선정이 적절하였다
+	<br>
+	1<input type="radio" name="teacherSatisfied" value="1" id="teacherSatisfied">
+	2<input type="radio" name="teacherSatisfied" value="2" id="teacherSatisfied">
+	3<input type="radio" name="teacherSatisfied" value="3" id="teacherSatisfied">
+	4<input type="radio" name="teacherSatisfied" value="4" id="teacherSatisfied">
+	5<input type="radio" name="teacherSatisfied" value="5" id="teacherSatisfied">
+	<br>	
+	교육원 직원들이 친절하게 응대하였습니까
+	<br>
+	1<input type="radio" name="workerService" value="1" id="workerService">
+	2<input type="radio" name="workerService" value="2" id="workerService">
+	3<input type="radio" name="workerService" value="3" id="workerService">
+	4<input type="radio" name="workerService" value="4" id="workerService">
+	5<input type="radio" name="workerService" value="5" id="workerService">	
+	<br>
+	주차시설 이용 편리성은 적절하였습니까
+	<br>
+	1<input type="radio" name="parkConvinience" value="1" id="parkConvinience">
+	2<input type="radio" name="parkConvinience" value="2" id="parkConvinience">
+	3<input type="radio" name="parkConvinience" value="3" id="parkConvinience">
+	4<input type="radio" name="parkConvinience" value="4" id="parkConvinience">
+	5<input type="radio" name="parkConvinience" value="5" id="parkConvinience">	
+	<br>
+	교통의 편리성은 적절하였습니까
+	<br>
+	1<input type="radio" name="trafficConvinience" value="1" id="trafficConvinience">
+	2<input type="radio" name="trafficConvinience" value="2" id="trafficConvinience">
+	3<input type="radio" name="trafficConvinience" value="3" id="trafficConvinience">
+	4<input type="radio" name="trafficConvinience" value="4" id="trafficConvinience">
+	5<input type="radio" name="trafficConvinience" value="5" id="trafficConvinience">
+	<br>
+	<button type="button" name="btn" id="btn">제출하기</button>
+	</form>
+	
 </div>
-	<p style="height: 200px"></p>
+
 </html>
