[유하람] 교육원 권한으로 강의등록 완료
- 교육원 권한으로 강의등록 완료
	강의등록(notice_lecture 모집완료 된것만 추출)
	-> notice_lecture 모집완료를 강의중으로 업데이트 할 것
- 수강생 권한으로 수강내역 조회 구현중

- 수강생 권한으로 수강내역 조회, 수강내역 결제 구현할 것

--- a/lms/src/main/resources/templates/PI/myPage/viewLectureSignupResult.html
+++ b/lms/src/main/resources/templates/PI/myPage/viewLectureSignupResult.html
@@ -12,6 +12,27 @@
 </th:block>
 
 <div layout:fragment="content">
-<h3 th:text="'안녕하세요 '+${institutionName}+' 입니다.'"></h3>
+	<h3>수강신청 내역</h3>
+	<table id="lectureSignup">
+		<thead>	
+			<tr>
+				<th>수강신청코드</th>
+				<th>강의시작일자</th>
+				<th>강의마감일자</th>
+				<th>교육원명</th>
+				<th>수강신청일</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+		</tbody>
+	</table>
+
 </div>
 </html>
