--- a/lms/src/main/resources/templates/institution/lecture/addLecture.html
+++ b/lms/src/main/resources/templates/institution/lecture/addLecture.html
@@ -9,52 +9,105 @@
 
 <!-- html 고유 스크립트 추가 -->
 <th:block layout:fragment="script">
+<script>
+$(document).ready(function(){
+	// 등록버튼 클릭
+	$('#insert').click(function(){
+		console.log("등록 버튼 클릭..");
+		// 수업일수 폼 유효성검사	
+		let numberCheck = /^[0-9]+$/;
+		
+		if($('#lectureClassDays').val() ==''){
+			$('#helper').text('수업일수는 숫자만 입력가능합니다!');
+			$('#lectureClassDays').focus();
+		}else {
+			console.log('강의등록진행..');
+			$.ajax({
+				url:'/institution/lectureCheck'
+				,data:{noticeLectureCode:$('#noticeLectureCode').val()}
+				,type:'Post'
+				,dataType:'json'
+				,success:function(result){
+					if(result){
+					alert('수강신청 이력이 존재합니다. 해당강의는 수강신청 하실 수 없습니다');
+					} else{
+						alert('수강신청이 완료되었습니다. 수강신청결과 확인 후 결제하여주십시오');
+						$('#addLecture').submit();
+					}
+				}
+			});		
+		}	
+	});
+});
+</script>
 </th:block>
 
 <div layout:fragment="content">
 	<h2>강의 등록</h2>
-	<form id="addLecture" action="/institution/lecture/addLecture" method="post">
+	<form id="addLecture" action="/institution/lecture/addLecture" method="post" th:each="list:${NLlist}">
 		<div class="form-group">
 			<label>강의공고명 :</label>
-			<select id="memberTeacherCode" name="memberTeacherCode">
-				<option value="">--- 선택 ---</option>
-				<option th:each="memberTeacher:${memberTeacher}" th:text="${memberTeacher.memberTeacherName}" th:value="${memberTeacher.memberTeacherCode}"></option> 
-			</select>
+			<div class="row">
+				<div class="col-sm-4">
+					<input class="form-control" th:value="${list.noticeLectureTitle}" name="noticeLectureTitle" readonly="readonly">
+				</div>
+				<div class="col-sm-8">			
+					<input hidden="hidden" th:value="${list.noticeLectureCode}" id="noticeLectureCode" name="noticeLectureCode">
+					<input hidden="hidden" th:value="${list.infoLectureCode}" name="infoLectureCode">
+				</div>
+			</div>		
 		</div>
 		<div class="form-group">
-			<label>강의개요 :</label>
-		    <select id="infoLectureSort" name="infoLectureSort">
-		    	<option value="">--- 선택 ---</option>
-		    	<option th:each="infoLectureSort:${infoLectureSort}" th:text="${infoLectureSort.infoLectureSort}" th:value="${infoLectureSort.infoLectureSort}"></option>                                                                                                   
-		    </select>
-		    <select id="infoLectureName" name="infoLectureCode">
-		    	<option value="">--- 선택 ---</option>
-		    </select>
+			<label>교육원명 :</label>
+			<div class="row">
+				<div class="col-sm-4">
+					<input class="form-control" th:value="${list.institutionName}" name="institutionName" readonly="readonly">
+				</div>
+				<div class="col-sm-8">			
+					<input hidden="hidden" th:value="${list.institutionCode}" name="institutionCode">
+				</div>
+			</div>		
 		</div>
 		<div class="form-group">
 			<label>강사명 :</label>
-			<select id="memberTeacherCode" name="memberTeacherCode">
-				<option value="">--- 선택 ---</option>
-				<option th:each="memberTeacher:${memberTeacher}" th:text="${memberTeacher.memberTeacherName}" th:value="${memberTeacher.memberTeacherCode}"></option> 
-			</select>
+			<div class="row">
+				<div class="col-sm-4">
+					<input class="form-control" th:value="${list.memberTeacherName}" name="memberTeacherName" readonly="readonly">
+				</div>
+				<div class="col-sm-8">			
+					<input hidden="hidden" th:value="${list.memberTeacherCode}" name="memberTeacherCode">
+				</div>
+			</div>		
 		</div>
-		<div class="row">
-			<div class="col-sm-6">
-				<label>강의시작일 :</label>
-			    <input type="date" class="form-control" placeholder="ex) 공백없이 다음과 같이 적어주세요.. 2019-01-01-09시" id="noticeLectureRecruitmentStartDate" name="noticeLectureRecruitmentStartDate">
-			</div>
-			<div class="col-sm-6">
-				<label>강의종료일 :</label>
-			    <input type="date" class="form-control" placeholder="ex) 공백없이 다음과 같이 적어주세요.. 2019-01-01-09시" id="noticeLectureRecruitmentEndDate" name="noticeLectureRecruitmentEndDate">
-			</div>
-		</div>		
 		<div class="form-group">
-			<label>수강일수 :</label>
-		    <input type="text" class="form-control" placeholder="ex) 숫자로만 적어주세요" id="noticeLectureResultDate" name="noticeLectureResultDate">
+			<div class="row">
+				<div class="col-sm-4">
+					<label>강의시작일 :</label>
+				    <input type="date" class="form-control" th:value="${list.noticeLectureStartDate}" id="noticeLectureStartDate" name="noticeLectureStartDate" readonly="readonly">
+				</div>
+				<div class="col-sm-4">
+					<label>강의종료일 :</label>
+				    <input type="date" class="form-control" th:value="${list.noticeLectureEndDate}" id="noticeLectureEndDate" name="noticeLectureEndDate" readonly="readonly">
+				</div>
+				<div class="col-sm-4">
+					<input class="form-control" hidden="hidden">
+				</div>
+			</div>
+		</div>	
+		<div class="form-group">
+			<label>수업일수 :</label>
+			<div class="row">
+				<div class="col-sm-4">
+				    <input type="text" class="form-control" placeholder="ex) 숫자로만 적어주세요" id="lectureClassDays" name="lectureClassDays">
+				</div>
+				<div class="col-sm-8">
+				    <input type="text" hidden="hidden">
+				</div>
+		    </div>
 		</div>
 		
 		<span id="helper" style="color:red"></span>
-		<button id="insert" type="button">등록하기</button>	
+		<button id="insert" type="button">강의등록</button>	
 	</form>
 </div>
 </html>
