--- a/lms/src/main/resources/templates/institution/member/list.html
+++ b/lms/src/main/resources/templates/institution/member/list.html
@@ -12,28 +12,15 @@
 <th:block layout:fragment="script">
 <script>
 $(document).ready(function(){
-	$('#btnList').hide();
 	//	회원 등급별로 조회하기 select 출력
 	$('#memberRank').change(function(){
-		console.log("조회할회원등급: "+$('#memberRank').val());
-		/*$.ajax({
-            type : 'GET'
-	        ,data : {'memberRank':memberRank}
-    	    ,url : '/rankList'
-        	,success : function(data) {
-            	console.log(data)
-            }
-	    });*/
-	});
-	//	회원목록 출력하기
-	$('#btnList').on('click',function(){
-		console.log("btnList click test")
+		console.log('조회할회원등급: '+$('#memberRank').val());
 		$.ajax({
-			url:'/getMembers'
+			url:'/getMembersRank'
     		,type:'GET'
-//    		,data:{'list':list}
+    		,data:{memberRank:$('#memberRank').val()}
 			,success:function(result){	//	Controller에서 currentPage를 받아옴.
-			//	$('#memberList').empty();
+				$('#memberList').empty();
 				$(result).each(function(index,item){//	반복문 사용해서 member list 가져오기
 					$('#memberList').append('<tr>');
 //					$('#memberList').append('<td th:text><input type="checkbox" class="ck" value="'+item.memberOnlineId+'"></td>');
@@ -46,7 +33,35 @@ $(document).ready(function(){
 				});
 			}
 		});
-		
+		$('#btnList').trigger('click');
+	});
+	document.getElementById("btnList").addEventListener("click", function(){
+		if(document.getElementById("memberRank").value == ""){		
+			$.ajax({
+				url:'/getMembers'
+	    		,type:'GET'
+//	    		,data:{memberRank:$('#memberRank').val()}
+				,success:function(result){	//	Controller에서 currentPage를 받아옴.
+				//	$('#memberList').empty();
+					$(result).each(function(index,item){//	반복문 사용해서 member list 가져오기
+						$('#memberList').append('<tr>');
+//						$('#memberList').append('<td th:text><input type="checkbox" class="ck" value="'+item.memberOnlineId+'"></td>');
+						$('#memberList').append('<td th:text>'+item.memberName+'</td>');
+						$('#memberList').append('<td th:text>'+item.memberOnlineId+'</td>');
+						$('#memberList').append('<td th:text>'+item.memberPhoneNumber+'</td>');
+						$('#memberList').append('<td th:text>'+item.institutionName+'</td>');
+						$('#memberList').append('<td th:text>'+item.memberRank+'</td>');
+						$('#memberList').append('</tr>');
+					});
+				}
+			});
+			$('#btnList').trigger('click');
+		}
+	//	회원목록 출력하기
+	$('#btnList').hide();
+/* 	$('#btnList').on('click',function(){
+		console.log("btnList click test")
+ */		
 	});
 	$('#btnList').trigger('click');
 });
@@ -60,8 +75,8 @@ $(document).ready(function(){
 			<div class="form-group">
 				<label for="memberRank">등급별조회</label>
 				<select class="form-control" id="memberRank" name="memberRank">
-					<option value="전체보기">전체보기</option>
-					<option th:each="rank:${rank}" th:value="${rank.memberRank}" th:text="${rank.memberRank}"></option>
+					<option value="">전체보기</option>
+					<option th:each="memberRank:${memberRank}" th:value="${memberRank.memberRank}" th:text="${memberRank.memberRank}"></option>
 				</select>
 				<small class="form-text text-muted">조회할 등급을 선택하세요</small>
 			</div>
