--- a/lms/src/main/resources/templates/association/associationIndex.html
+++ b/lms/src/main/resources/templates/association/associationIndex.html
@@ -33,7 +33,7 @@
 	<h3>협회 : 자격시험 장소 관리</h3>
 	<ul>
 		<li><a href="/association/license/addLicenseTestLocation">자격시험 장소 등록</a></li>
-		
+		<li><a href="/association/license/LicenseTestLocationList">자격시험 장소 조회</a></li>
 		<li>#<a href="">자격시험 장소 수정</a></li>
 		<li>#<a href="">자격시험 장소 삭제</a></li>
 		
