--- a/lms/src/main/resources/templates/fragments/associationSider.html
+++ b/lms/src/main/resources/templates/fragments/associationSider.html
@@ -69,7 +69,7 @@ $(document).ready(function() {
 		<i style="color:white" class="fas fa-caret-down"></i>
 	</button>
 	<div class="navdropdown-container">
-		<a class="text-white" href="/">회원조회</a>
+		<a class="text-white" href="/association/memberlist">회원조회</a>
 		<a class="text-white" href="/sendApprovalCode">승인코드전송</a>
 	</div>
 </div>
