[한병권] 메인페이지 프로세스 추가

--- a/lms/src/main/resources/templates/association/refundPolicy/refundPolicyList.html
+++ b/lms/src/main/resources/templates/association/refundPolicy/refundPolicyList.html
@@ -54,14 +54,14 @@
 	</table>
 	<br>
 	<br>
-	<h3>자격 환불정책</h3>
+	<h3>자격시험 환불정책</h3>
 	<a href="/association/refundPolicy/addRefundPolicyLicense" class="btn btn-secondary btn-rightLarge">자격 환불정책 추가</a>
 	<table class="table">
 		<thead>
 			<tr>
-				<th>자격 환불정책 명</th>
-				<th>자격 환불정책 상세내용</th>			
-				<th>자격 환불률</th>
+				<th>자격시험 환불정책 명</th>
+				<th>자격시험 환불정책 상세내용</th>			
+				<th>자격시험 환불률</th>
 				<th>개정일</th>
 			</tr>
 		</thead>
