--- a/lms/src/main/resources/templates/rootIndex.html
+++ b/lms/src/main/resources/templates/rootIndex.html
@@ -43,6 +43,8 @@
 	<p>한개의 협회가 여러개의 교육원 시설을 통합으로 관리하기 위한 시스템</p>
 	<br>
 	<h3>배포일 2019-07-12</h3>
+	
+	<img th:src="@{images/main.png}">
 	<p style="height: 100px"></p>
 	<h4>권한별 역할</h4>
 	<table class="rootTable">
