--- a/lms/src/main/resources/templates/association/member/listAssociationMember.html
+++ b/lms/src/main/resources/templates/association/member/listAssociationMember.html
@@ -24,17 +24,23 @@ $(document).ready(function(){
 				$(result).each(function(index,item){//	반복문 사용해서 member list 가져오기
 					$('#memberList').append('<tr>');
 //					$('#memberList').append('<td th:text><input type="checkbox" class="ck" value="'+item.memberOnlineId+'"></td>');
+					$('#memberList').append('<td th:text>'+item.memberCode+'</td>');
 					$('#memberList').append('<td th:text>'+item.memberName+'</td>');
 					$('#memberList').append('<td th:text>'+item.memberOnlineId+'</td>');
 					$('#memberList').append('<td th:text>'+item.memberPhoneNumber+'</td>');
+					$('#memberList').append('<td th:text>'+item.institutionCode+'</td>');
 					$('#memberList').append('<td th:text>'+item.institutionName+'</td>');
 					$('#memberList').append('<td th:text>'+item.memberRank+'</td>');
+					$('#memberList').append('<td th:text>'+item.memberDate+'</td>');
+					
 					$('#memberList').append('</tr>');
 				});
 			}
 		});
 		$('#btnList').trigger('click');
 	});
+	//	회원 교육원별 조회하기 select 출력
+	
 	document.getElementById("btnList").addEventListener("click", function(){
 		if(document.getElementById("memberRank").value == ""){		
 			$.ajax({
@@ -46,11 +52,15 @@ $(document).ready(function(){
 					$(result).each(function(index,item){//	반복문 사용해서 member list 가져오기
 						$('#memberList').append('<tr>');
 //						$('#memberList').append('<td th:text><input type="checkbox" class="ck" value="'+item.memberOnlineId+'"></td>');
+						$('#memberList').append('<td th:text>'+item.memberCode+'</td>');
 						$('#memberList').append('<td th:text>'+item.memberName+'</td>');
 						$('#memberList').append('<td th:text>'+item.memberOnlineId+'</td>');
 						$('#memberList').append('<td th:text>'+item.memberPhoneNumber+'</td>');
+						$('#memberList').append('<td th:text>'+item.institutionCode+'</td>');
 						$('#memberList').append('<td th:text>'+item.institutionName+'</td>');
 						$('#memberList').append('<td th:text>'+item.memberRank+'</td>');
+						$('#memberList').append('<td th:text>'+item.memberDate+'</td>');
+						
 						$('#memberList').append('</tr>');
 					});
 				}
@@ -86,11 +96,14 @@ $(document).ready(function(){
 	<table class="table table-hover">
 		<thead>
 			<tr>
+				<th scope="col">회원코드</th>
 				<th scope="col">이름</th>
 				<th scope="col">아이디</th>
 				<th scope="col">전화번호</th>
+				<th scope="col">교육원코드</th>
 				<th scope="col">교육원</th>
 				<th scope="col">회원등급</th>
+				<th scope="col">가입일</th>
 			</tr>
 		</thead>
 		<tbody id="memberList">
