[유하람] 교육원 권한 면접결과등록 처리, 수강생 권한 수강신청 결과 조회 처리 수정
강의공고 진행상태 컬럼 진행단계
: 1. 교육원이 면접결과 등록 시 '모집완료' -> 2. 수강생이 '모집완료' 강의공고 결제
-> 3. 모든 수강생이 강의결제 완료 하면 교욱원 권한으로 '강의중'으로 등록

2단계 진행중

--- a/lms/src/main/resources/templates/PI/myPage/myInfo.html
+++ b/lms/src/main/resources/templates/PI/myPage/myInfo.html
@@ -16,7 +16,7 @@
 	<div class="col-sm-2 list-group"></div>
 	<div class="col-sm-2 list-group">
 		<a th:href="@{'/memberModify?institutionCode='+${institutionCode}}" class="list-group-item list-group-item-action">정보수정</a>
-		<a href="#" class="list-group-item list-group-item-action">#수강정보</a>
+		<a th:href="@{'/PI/myPage/viewLectureSignupList?institutionCode='+${institutionCode}}" class="list-group-item list-group-item-action">수강정보</a>
 		<a href="#" class="list-group-item list-group-item-action">#학습자료실</a>
 		<a href="#" class="list-group-item list-group-item-action">#학사 종합정보</a>
 		<a href="#" class="list-group-item list-group-item-action">#성적관리</a>
