--- a/lms/src/main/resources/templates/institution/lecture/detailLecture.html
+++ b/lms/src/main/resources/templates/institution/lecture/detailLecture.html
@@ -29,11 +29,11 @@
 			</tr>
 			<tr>
 				<td>강의 시작일</td>
-				<td th:text="${lecture.lectureStartDate}" th:value="${lecture.lectureStartDate}"></td>
+				<td th:text="${lecture.noticeLectureStartDate}" th:value="${lecture.noticeLectureStartDate}"></td>
 			</tr>
 			<tr>
 				<td>강의 종료일</td>
-				<td th:text="${lecture.lectureEndDate}" th:value="${lecture.lectureEndDate}"></td>
+				<td th:text="${lecture.noticeLectureEndDate}" th:value="${lecture.noticeLectureEndDate}"></td>
 			</tr>
 			<tr>
 				<td>수업일수</td>
